--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,96 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<nav class="navbar navbar-expand-lg bg-white">
+  <div class="container-fluid">
+    <div class="row" style="width:100vw;">
+      <div class="col-4 col-lg-5">
+        <button class="navbar-toggler mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div class="col-6 col-lg-5">
+        <%= image_tag "logo.png"%>
+      </div>
+      <div class="col-2 col-lg-2">
+        <div class="d-flex align-items-center" style="height:100%;">
+          <%= image_tag "ic.search.svg", class: "search-icon"%>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
+
+<div class="nav-bar-bottom">
+  <div class="d-flex align-items-center justify-content-center">
+    <button>abouts us <i class="arrow down me-3"></i></button>
+    <button>our products <i class="arrow down me-3"></i></button>
+    <button>intimate health <i class="arrow down me-3"></i></button>
+    <button>contact us</button>
+  </div>
+</div>
+
+<div class="sub-nav-bar row">
+  <div class="col-3"></div>
+  <div class="col-9 d-flex justify-content-start">
+    <button>brand philosophy</button>
+    <button>product technology</button>
+  </div>
+</div>
+
+<div class="sub-nav-bar row">
+  <div class="col-3"></div>
+  <div class="col-9 d-flex justify-content-start">
+    <button>all products</button>
+    <button>intibiome wellness</button>
+    <button>intibiome active</button>
+    <button>intibiome agecare</button>
+  </div>
+</div>
+
+<div class="sub-nav-bar row">
+  <div class="col-3"></div>
+  <div class="col-9 d-flex justify-content-start">
+    <button>article 1</button>
+    <button>article 2</button>
+    <button>article 3</button>
+    <button>faq</button>
+    <button>contact us</button>
+  </div>
+</div>
+
+
+<div class="collapse navbar-collapse mini-navbar" id="navbarTogglerDemo01">
+  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <li class="nav-item">
+      <a class="nav-link">brand philosophy</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">product technology</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">all products</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">intibiome wellness</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">intibiome active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">intibiome agecare</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">article 1</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">article 2</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">article 3</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">faq</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">contact us</a>
+    </li>
+  </ul>
+</div>
