--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,6 +6,11 @@
   opacity: 1;
 }
 
+.search-button {
+  border: none;
+  background-color: white;
+}
+
 .nav-bar-top {
   background-color:#FFFFFF;
 }
@@ -48,11 +53,15 @@
 .mini-navbar {
   background-color:#389CD6;
   color:white;
+  display: none;
 }
 
 .sub-nav-bar {
   background-color: #9D8E8E;
   color: white;
+}
+
+.display-none {
   display: none;
 }
 
@@ -64,8 +73,33 @@
   opacity: 1;
 }
 
+.button-nav-bottom:hover {
+  font-weight: bolder;
+}
+
+.collapsed-button {
+  border: none;
+  background-color: #389CD6;
+}
+
+.collapsed-button:hover {
+  font-weight: bolder;
+}
+
+
+.bolder {
+  font-weight: bolder;
+}
+
 @media (max-width: 600px) {
   .nav-bar-bottom {
     display: none;
+  }
+  .sub-nav-bar {
+    display: none;
+  }
+
+  .mini-navbar {
+    display: block;
   }
 }
