--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,115 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+////////////////////////
+
+.search-icon {
+  width: 24px;
+  height: 24px;
+  opacity: 1;
+}
+
+.search-button {
+  border: none;
+  background-color: white;
+}
+
+.nav-bar-top {
+  background-color:#FFFFFF;
+}
+
+.nav-bar-bottom {
+  background-color: #389CD6;
+  height:8vh;
+  width:100vw;
+}
+
+.nav-bar-bottom button {
+  background-color: #389CD6;
+  height: 8vh;
+  border: none;
+  color: white;
+  opacity: 1;
+}
+
+.btn {
+  background-color: #389CD6;
+  height: 8vh;
+  border: none;
+  color: white;
+  opacity: 1;
+}
+
+.arrow {
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  margin-bottom: 3px;
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+.mini-navbar {
+  background-color:#389CD6;
+  color:white;
+  display: none;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.sub-nav-bar {
+  background-color: #9D8E8E;
+  color: white;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.display-none {
+  display: none;
+}
+
+.sub-nav-bar button {
+  background-color: #9D8E8E;
+  height: 8vh;
+  border: none;
+  color: white;
+  opacity: 1;
+}
+
+.button-nav-bottom:hover {
+  font-weight: bolder;
+}
+
+.collapsed-button {
+  border: none;
+  background-color: #389CD6;
+}
+
+.collapsed-button:hover {
+  font-weight: bolder;
+}
+
+
+.bolder {
+  font-weight: bolder;
+}
+
+@media (max-width: 600px) {
+  .nav-bar-bottom {
+    display: none;
+  }
+  .sub-nav-bar {
+    display: none;
+  }
+
+  .mini-navbar {
+    display: block;
+  }
+}
