--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,91 @@
 // Specific CSS for your home-page
+.main-text {
+  text-align: center;
+  font-family: 'Trebuchet MS';
+  color: #389CD6;
+  font-size: 39px;
+}
+
+p {
+  color: darkgray
+}
+
+body {
+  background-color: white;
+}
+
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+.icons {
+  width: 100%;
+}
+
+
+.img-product {
+  width: 100%;
+  height: 80%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  box-shadow:  0 .170rem .55rem rgba($black, .075);;
+}
+
+.info1 {
+  width: 100%;
+  height: 20%;
+  background-color: #389CD6;
+  color: white;
+  text-align: center;
+  padding:10px;
+  border-bottom-left-radius:10px;
+  border-bottom-right-radius:10px;
+  box-shadow:  0 .170rem .55rem rgba($black, .075);;
+}
+
+.info2 {
+  width: 100%;
+  height:20%;
+  background-color: #309D5F;
+  color: white;
+  text-align: center;
+  padding:10px;
+  border-bottom-left-radius:10px;
+  border-bottom-right-radius:10px;
+  box-shadow:  0 .170rem .55rem rgba($black, .075);;
+}
+
+.info3 {
+  width: 100%;
+  height:20%;
+  background-color: #EE6381;
+  color: white;
+  text-align: center;
+  padding:10px;
+  border-bottom-left-radius:10px;
+  border-bottom-right-radius:10px;
+  box-shadow:  0 .170rem .55rem rgba($black, .075);;
+}
+
+.card-product-dimensions {
+  width:60vh;
+}
+
+.carousel-icon {
+  font-size:35px;
+}
+
+.carousel-div {
+  display: none !important;
+}
+
+@media (max-width: 600px) {
+  .cards-products {
+    display: none;
+  }
+
+  .carousel-div {
+    display: block !important;
+  }
+}
