--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,153 @@
 <%= render 'shared/navbar_and_banner' %>
+
+<div class="row mt-5 mb-4">
+  <div class="col-1 col-lg-4"></div>
+  <div class="col-10 col-lg-4">
+    <h2 class="main-text">we're here to help</h2>
+    <p class="text-center mt-4">When it comes to caring for our most intimate areas, we've lost our connection. </p>
+    <p class="text-center">Embarrassed, unwilling, or unable to communicate with others, we're needlessly neglecting the parts of our bodies that need it most.</p>
+    <p class="text-center">We're here to help. Providing you with the expertise, knowledge and products you need to feel confident in your personal care.</p>
+  </div>
+  <div class="col-1 col-lg-4"></div>
+</div>
+
+<div class="row">
+  <div class="col-0 col-lg-2"></div>
+
+  <div class="col-12 col-lg-8">
+    <img src="<%= image_path "icons.png" %>" class="icons" alt="">
+  </div>
+
+  <div class="col-0 col-lg-22"></div>
+</div>
+
+<div class="row mt-5 mb-5">
+  <div class="col-1 col-lg-2"></div>
+  <div class="col-10 col-lg-8">
+    <h2 class="main-text mt-3">whatever your age. whatever your lifestyle. whatever your interests.</h2>
+    <p class="text-center mt-5">Co-created with gynaecologists, our revolutionary products have been expertly developed to support your intimate microbiome and pH balance, and strengthen overall natural health. </p>
+    <p class="text-center">As the experts in intimate hygiene, we want to bring discussion about intimate wellness care out of the dark and demystify the taboos that surround it.</p>
+  </div>
+  <div class="col-1 col-lg-2"></div>
+</div>
+
+
+<div class="row">
+  <div class="col-2 col-lg-5"></div>
+  <div class="col-8 col-lg-2">
+    <h2 class="main-text" >our products</h2>
+  </div>
+  <div class="col-2 col-lg-5"></div>
+</div>
+
+<div class="row mt-4 mb-5 cards-products">
+  <div class="col-2 "></div>
+
+  <div class="col-2" style="height:320px">
+      <img src="<%= image_path "imagemask1.png" %>" class="img-product" alt="">
+      <div class="info1">
+        <h4>wellness</h4>
+      </div>
+  </div>
+
+  <div class="col-1"></div>
+
+  <div class="col-2" style="height:320px">
+      <img src="<%= image_path "imagemask2.png" %>" class="img-product" alt="">
+      <div class="info2">
+        <h4>active</h4>
+      </div>
+  </div>
+
+  <div class="col-1"></div>
+
+  <div class="col-2" style="height:320px">
+      <img src="<%= image_path "imagemask3.png" %>" class="img-product" alt="">
+      <div class="info3">
+        <h4>agecare</h4>
+      </div>
+  </div>
+
+  <div class="col-2"></div>
+</div>
+
+
+
+
+<div class="d-flex align-item-center justify-content-center m-5 carousel-div">
+
+  <div style="height:320px">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="<%= image_path "imagemask1.png" %>" class="img-product" alt="">
+          <div class="info1">
+            <h4>wellness</h4>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="<%= image_path "imagemask2.png" %>" class="img-product" alt="">
+          <div class="info2">
+            <h4>active</h4>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="<%= image_path "imagemask3.png" %>" class="img-product" alt="">
+          <div class="info3">
+            <h4>agecare</h4>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="fas fa-angle-double-left carousel-icon" style="color:black;" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="fas fa-angle-double-right carousel-icon" style="color:black;" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+
+</div>
+
+<div class="banner2 mb-5"></div>
+
+<div class="row mb-5">
+  <div class="col-0 col-lg-2"></div>
+  <div class="col-12 col-lg-8">
+    <h2 class="main-text" >keep up to date with our discoveries</h2>
+  </div>
+  <div class="col-0 col-lg-2"></div>
+</div>
+
+<div class="row mt-4 mb-5 cards-products">
+  <div class="col-2 "></div>
+
+  <div class="col-2" style="height:200px">
+      <img src="<%= image_path "imagemask1.png" %>" class="img-product" alt="">
+      <div class="info1">
+        <h4>wellness</h4>
+      </div>
+  </div>
+
+  <div class="col-1"></div>
+
+  <div class="col-2" style="height:200px">
+      <img src="<%= image_path "imagemask2.png" %>" class="img-product" alt="">
+      <div class="info2">
+        <h4>active</h4>
+      </div>
+  </div>
+
+  <div class="col-1"></div>
+
+  <div class="col-2" style="height:200px">
+      <img src="<%= image_path "imagemask3.png" %>" class="img-product" alt="">
+      <div class="info3">
+        <h4>agecare</h4>
+      </div>
+  </div>
+
+  <div class="col-2"></div>
+</div>
