--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -105,6 +105,10 @@
   font-weight: bolder;
 }
 
+.display-none {
+  display: none;
+}
+
 
 .bolder {
   font-weight: bolder;
@@ -121,4 +125,5 @@
   .mini-navbar {
     display: block;
   }
+
 }
