--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -41,7 +41,7 @@ html, body {
   padding:10px;
   border-bottom-left-radius:10px;
   border-bottom-right-radius:10px;
-  box-shadow:  0 .170rem .55rem rgba($black, .075);;
+  box-shadow:  0 .170rem .55rem rgba($black, .075);
 }
 
 .info2 {
@@ -53,7 +53,7 @@ html, body {
   padding:10px;
   border-bottom-left-radius:10px;
   border-bottom-right-radius:10px;
-  box-shadow:  0 .170rem .55rem rgba($black, .075);;
+  box-shadow:  0 .170rem .55rem rgba($black, .075);
 }
 
 .info3 {
@@ -65,7 +65,7 @@ html, body {
   padding:10px;
   border-bottom-left-radius:10px;
   border-bottom-right-radius:10px;
-  box-shadow:  0 .170rem .55rem rgba($black, .075);;
+  box-shadow:  0 .170rem .55rem rgba($black, .075);
 }
 
 .card-product-dimensions {
@@ -80,6 +80,50 @@ html, body {
   display: none !important;
 }
 
+.carousel-borders {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius:10px;
+  border-bottom-right-radius:10px
+}
+
+.articles {
+  margin-left: 250px;
+  margin-right: 250px;
+}
+
+.img-article {
+  width: 100%;
+  height: 70%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  box-shadow:  0 .170rem .55rem rgba($black, .075);
+}
+
+.info-article {
+  width: 100%;
+  height: 30%;
+  background-color: white;
+  color: #7B7070;
+  text-align: justify;
+  padding:14px;
+  border-bottom-left-radius:10px;
+  border-bottom-right-radius:10px;
+  box-shadow:  0 .170rem .55rem rgba($black, .075);
+}
+
+.see-more {
+  border: none;
+  border-radius: 12px;
+  padding: 15px 150px;
+  background-color: #389CD6;
+  color:white;
+}
+
+.see-more:hover {
+  background-color: #1c7bb3;
+}
+
 @media (max-width: 600px) {
   .cards-products {
     display: none;
@@ -87,5 +131,40 @@ html, body {
 
   .carousel-div {
     display: block !important;
+  }
+
+  .articles {
+    display: none;
+  }
+
+  .see-more {
+    padding: 15px 190px;
+  }
+
+  .first-footer-row {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .second-footer-row {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+  }
+
+  .footer {
+    height: 766px;
+  }
+
+  .line {
+    width: 24px;
+    height: 0px;
+  }
+
+  .margin-top-mobile {
+    margin-top: 6em;
   }
 }
