--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -76,8 +76,8 @@
 
 <div class="d-flex align-item-center justify-content-center m-5 carousel-div">
 
-  <div style="height:320px">
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div>
+    <div id="carouselExampleControls" class="carousel slide shadow carousel-borders" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="<%= image_path "imagemask1.png" %>" class="img-product" alt="">
@@ -121,33 +121,74 @@
   <div class="col-0 col-lg-2"></div>
 </div>
 
-<div class="row mt-4 mb-5 cards-products">
-  <div class="col-2 "></div>
+<div class="row mt-4 mb-5 articles cards-products">
 
-  <div class="col-2" style="height:200px">
-      <img src="<%= image_path "imagemask1.png" %>" class="img-product" alt="">
-      <div class="info1">
-        <h4>wellness</h4>
+  <div class="col-4" style="height:340px">
+      <img src="<%= image_path "article1.png" %>" class="img-article" alt="">
+      <div class="info-article">
+        <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
       </div>
   </div>
 
-  <div class="col-1"></div>
 
-  <div class="col-2" style="height:200px">
-      <img src="<%= image_path "imagemask2.png" %>" class="img-product" alt="">
-      <div class="info2">
-        <h4>active</h4>
+  <div class="col-4" style="height:340px">
+      <img src="<%= image_path "article2.png" %>" class="img-article" alt="">
+      <div class="info-article">
+        <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
       </div>
   </div>
 
-  <div class="col-1"></div>
 
-  <div class="col-2" style="height:200px">
-      <img src="<%= image_path "imagemask3.png" %>" class="img-product" alt="">
-      <div class="info3">
-        <h4>agecare</h4>
+  <div class="col-4" style="height:340px">
+      <img src="<%= image_path "article3.png" %>" class="img-article" alt="">
+      <div class="info-article">
+        <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
       </div>
   </div>
 
-  <div class="col-2"></div>
+
 </div>
+
+
+<div class="d-flex align-item-center justify-content-center m-5 carousel-div">
+
+  <div>
+    <div id="carouselExampleControls2" class="carousel slide shadow carousel-borders" data-bs-ride="carousel" style="height:350px">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="<%= image_path "article1.png" %>" class="img-article" alt="">
+          <div class="info-article">
+            <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="<%= image_path "article2.png" %>" class="img-article" alt="">
+          <div class="info-article">
+            <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="<%= image_path "article3.png" %>" class="img-article" alt="">
+          <div class="info-article">
+            <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
+        <span class="fas fa-angle-double-left carousel-icon" style="color:black;" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="next">
+        <span class="fas fa-angle-double-right carousel-icon" style="color:black;" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+
+</div>
+
+<div class="d-flex align-items-center justify-content-center mb-5">
+  <button class="see-more mb-5">see more</button>
+</div>
+
+<%= render 'shared/footer' %>
