--- a/app/views/shared/_navbar_and_banner.html.erb
+++ b/app/views/shared/_navbar_and_banner.html.erb
@@ -1,27 +1,28 @@
 <div class="stimulus" data-controller="navbar">
 
+
   <nav class="navbar navbar-expand-lg bg-white">
     <div class="container-fluid">
-      <div class="row" style="width:100vw;">
-        <div class="col-4 col-lg-5">
+
+
           <button class="navbar-toggler mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" data-action="click->navbar#displayicon" aria-expanded="false" aria-label="Toggle navigation">
             <span data-navbar-target="lines" class="mt-1 fas fa-align-justify"></span>
             <span data-navbar-target="close" class="mt-1 d-none fas fa-times"></span>
           </button>
-        </div>
-        <div class="col-6 col-lg-5">
-          <%= image_tag "logo.png"%>
-        </div>
-        <div class="col-2 col-lg-2">
-          <div class="d-flex align-items-center" style="height:100%;">
-            <button class="search-button">
-              <%= image_tag "ic.search.svg", class: "search-icon"%>
-            </button>
-          </div>
-        </div>
-      </div>
+
+
+          <%= image_tag "logo.png", class:"center"%>
+
+
+
+          <button class="search-button">
+            <%= image_tag "ic.search.svg", class: "search-icon position-icon"%>
+          </button>
+
     </div>
   </nav>
+
+
 
   <div class="nav-bar-bottom">
     <div class="d-flex align-items-center justify-content-center">
