--- a/app/views/shared/_navbar_and_banner.html.erb
+++ b/app/views/shared/_navbar_and_banner.html.erb
@@ -5,7 +5,7 @@
     <div class="container-fluid">
 
 
-          <button class="navbar-toggler mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" data-action="click->navbar#displayicon" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" data-action="click->navbar#displayicon" aria-expanded="false" aria-label="Toggle navigation">
             <span data-navbar-target="lines" class="mt-1 fas fa-align-justify"></span>
             <span data-navbar-target="close" class="mt-1 d-none fas fa-times"></span>
           </button>
