--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -19,17 +19,18 @@
 
 @media (max-width: 600px) {
   .banner {
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658668705/bannermobile_wbxhza.png');
-    height: 90vh;
+    height: 85vh;
   }
 
   .banner2 {
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658668808/banner2mobile_zz57qd.png');
-    height: 90vh;
+    height: 85vh;
+    width: 100vw;
     margin-top: 250px;
   }
 }
