--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -20,6 +20,7 @@
 @media (max-width: 600px) {
   .banner {
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658668705/bannermobile_wbxhza.png');
     height: 85vh;
@@ -27,10 +28,10 @@
 
   .banner2 {
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658668808/banner2mobile_zz57qd.png');
     height: 85vh;
     width: 100vw;
-    margin-top: 250px;
   }
 }
