--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -17,7 +17,7 @@
   background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658668769/banner2_ohsljv.png');
 }
 
-@media (max-width: 600px) {
+@media (max-width: 428px) {
   .banner {
     background-size: contain;
     background-repeat: no-repeat;
@@ -30,6 +30,21 @@
     background-repeat: no-repeat;
     background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658668808/banner2mobile_zz57qd.png');
     height: 55vh;
-    width: 100vw;
+  }
+}
+
+@media (max-width: 600px) {
+  .banner {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658668705/bannermobile_wbxhza.png');
+    height: 92vh;
+  }
+
+  .banner2 {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658668808/banner2mobile_zz57qd.png');
+    height: 92vh;
   }
 }
