--- a/app/views/shared/_navbar_and_banner.html.erb
+++ b/app/views/shared/_navbar_and_banner.html.erb
@@ -34,7 +34,8 @@
   </div>
 
       <div class="banner">
-
+        <img src="https://res.cloudinary.com/getacar/image/upload/v1658675352/bannermobileGG_im0cny.png" class="banner-mobile" alt="">
+        
         <div class="sub-nav-bar display-none row" data-navbar-target = "sub1">
           <div class="col-3"></div>
           <div class="col-9 d-flex justify-content-start">
