--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,11 +1,7 @@
 @media (min-width: 310px) {
   .banner {
-    background-size: contain;
-    background-position: center;
     padding: 150px 0;
     position: relative;
-    background-repeat: no-repeat;
-    background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658675352/bannermobileGG_im0cny.png');
     height: 65vh;
   }
 
@@ -19,16 +15,22 @@
     background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658668808/banner2mobile_zz57qd.png');
     height: 65vh;
   }
+
+  .banner-mobile {
+    width: 100%;
+    height: 65vh;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    display:block;
+    position:absolute;
+    top:0;
+  }
 }
 
 @media (min-width: 400px) {
   .banner {
-    background-size: contain;
-    background-position: center;
     padding: 150px 0;
     position: relative;
-    background-repeat: no-repeat;
-    background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658675352/bannermobileGG_im0cny.png');
     height: 92vh;
   }
 
@@ -40,6 +42,10 @@
     margin-top: 100px;
     position: relative;
     background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658668808/banner2mobile_zz57qd.png');
+    height: 92vh;
+  }
+
+  .banner-mobile {
     height: 92vh;
   }
 }
@@ -63,5 +69,9 @@
     margin-top: 100px;
     position: relative;
     background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658668769/banner2_ohsljv.png');
+  }
+
+  .banner-mobile {
+    display: none;
   }
 }
