--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -111,7 +111,9 @@
 
 </div>
 
-<div class="banner2 mb-5"></div>
+<div class="banner2 mb-5">
+  <img src="https://res.cloudinary.com/getacar/image/upload/v1658677125/banner2mobileG_sahhkm.png" class="banner-mobile2" alt="">
+</div>
 
 <div class="row mb-5">
   <div class="col-0 col-lg-2"></div>
