--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,17 +6,23 @@
   }
 
   .banner2 {
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
     padding: 150px 0;
     margin-top: 100px;
     position: relative;
-    background-image: url('https://res.cloudinary.com/getacar/image/upload/v1658668808/banner2mobile_zz57qd.png');
     height: 65vh;
   }
 
   .banner-mobile {
+    width: 100%;
+    height: 65vh;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    display:block;
+    position:absolute;
+    top:0;
+  }
+
+  .banner-mobile2 {
     width: 100%;
     height: 65vh;
     border-top-left-radius: 10px;
@@ -48,6 +54,10 @@
   .banner-mobile {
     height: 92vh;
   }
+
+  .banner-mobile2 {
+    height: 92vh;
+  }
 }
 
 
@@ -72,6 +82,10 @@
   }
 
   .banner-mobile {
+    display: none;
+  }
+
+  .banner-mobile2 {
     display: none;
   }
 }
