--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -23,13 +23,22 @@ html, body {
   width: 100%;
 }
 
+.shadow-card {
+  box-shadow:  0 .170rem .55rem rgba($black, .075);
+}
 
 .img-product {
   width: 100%;
-  height: 80%;
+  height: 60%;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  box-shadow:  0 .170rem .55rem rgba($black, .075);;
+}
+
+.name-product {
+  height: 20%;
+  background-color: #FFFFFF;
+  color:#7B7070;
+  text-align: center;
 }
 
 .info1 {
@@ -41,7 +50,6 @@ html, body {
   padding:10px;
   border-bottom-left-radius:10px;
   border-bottom-right-radius:10px;
-  box-shadow:  0 .170rem .55rem rgba($black, .075);
 }
 
 .info2 {
@@ -53,7 +61,6 @@ html, body {
   padding:10px;
   border-bottom-left-radius:10px;
   border-bottom-right-radius:10px;
-  box-shadow:  0 .170rem .55rem rgba($black, .075);
 }
 
 .info3 {
@@ -65,7 +72,6 @@ html, body {
   padding:10px;
   border-bottom-left-radius:10px;
   border-bottom-right-radius:10px;
-  box-shadow:  0 .170rem .55rem rgba($black, .075);
 }
 
 .card-product-dimensions {
