--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,29 +43,44 @@
 <div class="row mt-4 mb-5 cards-products">
   <div class="col-2 "></div>
 
-  <div class="col-2" style="height:280px">
+  <div class="col-2" style="height:350px">
+    <div class="shadow-card">
       <img src="<%= image_path "imagemask1.png" %>" class="img-product" alt="">
+      <div class="name-product p-3">
+        <h4 style="font-size:15px;">intibiome wellness daily intimate wash</h4>
+      </div>
       <div class="info1">
         <h4>wellness</h4>
       </div>
+    </div>
   </div>
 
   <div class="col-1"></div>
 
-  <div class="col-2" style="height:280px">
+  <div class="col-2" style="height:350px">
+    <div class="shadow-card">
       <img src="<%= image_path "imagemask2.png" %>" class="img-product" alt="">
+      <div class="name-product p-3">
+        <h4 style="font-size:15px;">intibiome active extra protection intimate wash</h4>
+      </div>
       <div class="info2">
         <h4>active</h4>
       </div>
+    </div>
   </div>
 
   <div class="col-1"></div>
 
-  <div class="col-2" style="height:280px">
+  <div class="col-2" style="height:350px">
+    <div class="shadow-card">
       <img src="<%= image_path "imagemask3.png" %>" class="img-product" alt="">
+      <div class="name-product p-3">
+        <h4 style="font-size:15px;">intibiome agecare dryness relief intimate wash</h4>
+      </div>
       <div class="info3">
         <h4>agecare</h4>
       </div>
+    </div>
   </div>
 
   <div class="col-2"></div>
@@ -81,18 +96,27 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="<%= image_path "imagemask1.png" %>" class="img-product" alt="">
+          <div class="name-product p-3">
+            <h4 style="font-size:15px;">intibiome wellness daily intimate wash</h4>
+          </div>
           <div class="info1">
             <h4>wellness</h4>
           </div>
         </div>
         <div class="carousel-item">
           <img src="<%= image_path "imagemask2.png" %>" class="img-product" alt="">
+          <div class="name-product p-3">
+            <h4 style="font-size:15px;">intibiome active extra protection intimate wash</h4>
+          </div>
           <div class="info2">
             <h4>active</h4>
           </div>
         </div>
         <div class="carousel-item">
           <img src="<%= image_path "imagemask3.png" %>" class="img-product" alt="">
+          <div class="name-product p-3">
+            <h4 style="font-size:15px;">intibiome agecare dryness relief intimate wash</h4>
+          </div>
           <div class="info3">
             <h4>agecare</h4>
           </div>
