--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,4 +1,55 @@
 @media (min-width: 310px) {
+  .img-product {
+    width: 100%;
+    height: 60%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+
+  .name-product {
+    height: 20%;
+    background-color: #FFFFFF;
+    color:#7B7070;
+    text-align: center;
+  }
+
+  .info1 {
+    width: 100%;
+    height: 20%;
+    background-color: #389CD6;
+    color: white;
+    text-align: center;
+    padding:10px;
+    border-bottom-left-radius:10px;
+    border-bottom-right-radius:10px;
+  }
+
+  .info2 {
+    width: 100%;
+    height:20%;
+    background-color: #309D5F;
+    color: white;
+    text-align: center;
+    padding:10px;
+    border-bottom-left-radius:10px;
+    border-bottom-right-radius:10px;
+  }
+
+  .info3 {
+    width: 100%;
+    height:20%;
+    background-color: #EE6381;
+    color: white;
+    text-align: center;
+    padding:10px;
+    border-bottom-left-radius:10px;
+    border-bottom-right-radius:10px;
+  }
+
+  .carousel-product-height {
+    height:320px;
+  }
+
   .banner {
     padding: 150px 0;
     position: relative;
@@ -34,6 +85,58 @@
 }
 
 @media (min-width: 400px) {
+  .img-product {
+    width: 100%;
+    height: 80%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+
+  .name-product {
+    height: 10%;
+    background-color: #FFFFFF;
+    color:#7B7070;
+    text-align: center;
+  }
+
+  .info1 {
+    width: 100%;
+    height: 10%;
+    background-color: #389CD6;
+    color: white;
+    text-align: center;
+    padding:10px;
+    border-bottom-left-radius:10px;
+    border-bottom-right-radius:10px;
+  }
+
+  .info2 {
+    width: 100%;
+    height:10%;
+    background-color: #309D5F;
+    color: white;
+    text-align: center;
+    padding:10px;
+    border-bottom-left-radius:10px;
+    border-bottom-right-radius:10px;
+  }
+
+  .info3 {
+    width: 100%;
+    height:10%;
+    background-color: #EE6381;
+    color: white;
+    text-align: center;
+    padding:10px;
+    border-bottom-left-radius:10px;
+    border-bottom-right-radius:10px;
+  }
+
+  .carousel-product-height {
+    height:450px;
+  }
+
+
   .banner {
     padding: 150px 0;
     position: relative;
