--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -94,7 +94,7 @@
   <div>
     <div id="carouselExampleControls" class="carousel slide shadow carousel-borders" data-bs-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active carousel-product-height">
           <img src="<%= image_path "imagemask1.png" %>" class="img-product" alt="">
           <div class="name-product p-3">
             <h4 style="font-size:15px;">intibiome wellness daily intimate wash</h4>
@@ -103,7 +103,7 @@
             <h4>wellness</h4>
           </div>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item carousel-product-height">
           <img src="<%= image_path "imagemask2.png" %>" class="img-product" alt="">
           <div class="name-product p-3">
             <h4 style="font-size:15px;">intibiome active extra protection intimate wash</h4>
@@ -112,7 +112,7 @@
             <h4>active</h4>
           </div>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item carousel-product-height">
           <img src="<%= image_path "imagemask3.png" %>" class="img-product" alt="">
           <div class="name-product p-3">
             <h4 style="font-size:15px;">intibiome agecare dryness relief intimate wash</h4>
