--- a/app/views/shared/_navbar_and_banner.html.erb
+++ b/app/views/shared/_navbar_and_banner.html.erb
@@ -70,37 +70,37 @@
               <button class="nav-link collapsed-button"></button>
             </li>
             <li class="nav-item">
-              <button class="nav-link collapsed-button">brand philosophy</button>
+              <button class="nav-link collapsed-button ms-3">brand philosophy</button>
             </li>
             <li class="nav-item">
-              <button class="nav-link collapsed-button">product technology</button>
+              <button class="nav-link collapsed-button ms-3">product technology</button>
             </li>
             <li class="nav-item">
-              <button class="nav-link collapsed-button">all products</button>
+              <button class="nav-link collapsed-button ms-3">all products</button>
             </li>
             <li class="nav-item">
-              <button class="nav-link collapsed-button">intibiome wellness</button>
+              <button class="nav-link collapsed-button ms-3">intibiome wellness</button>
             </li>
             <li class="nav-item">
-              <button class="nav-link collapsed-button">intibiome active</button>
+              <button class="nav-link collapsed-button ms-3">intibiome active</button>
             </li>
             <li class="nav-item">
-              <button class="nav-link collapsed-button">intibiome agecare</button>
+              <button class="nav-link collapsed-button ms-3">intibiome agecare</button>
             </li>
             <li class="nav-item">
-              <button class="nav-link collapsed-button">article 1</button>
+              <button class="nav-link collapsed-button ms-3">article 1</button>
             </li>
             <li class="nav-item">
-              <button class="nav-link collapsed-button">article 2</button>
+              <button class="nav-link collapsed-button ms-3">article 2</button>
             </li>
             <li class="nav-item">
-              <button class="nav-link collapsed-button">article 3</button>
+              <button class="nav-link collapsed-button ms-3">article 3</button>
             </li>
             <li class="nav-item">
-              <button class="nav-link collapsed-button">faq</button>
+              <button class="nav-link collapsed-button ms-3">faq</button>
             </li>
             <li class="nav-item">
-              <button class="nav-link collapsed-button">contact us</button>
+              <button class="nav-link collapsed-button ms-3">contact us</button>
             </li>
           </ul>
         </div>
