--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,8 +43,8 @@
 <div class="row mt-4 mb-5 cards-products">
   <div class="col-2 "></div>
 
-  <div class="col-2" style="height:370px">
-    <div class="shadow-card">
+  <div class="col-2">
+    <div class="shadow-card" style="height:390px">
       <img src="<%= image_path "imagemask1.png" %>" class="img-product" alt="">
       <div class="name-product p-3">
         <h4 style="font-size:15px;">intibiome wellness daily intimate wash</h4>
@@ -57,8 +57,8 @@
 
   <div class="col-1"></div>
 
-  <div class="col-2" style="height:370px">
-    <div class="shadow-card">
+  <div class="col-2">
+    <div class="shadow-card" style="height:390px">
       <img src="<%= image_path "imagemask2.png" %>" class="img-product" alt="">
       <div class="name-product p-3">
         <h4 style="font-size:15px;">intibiome active extra protection intimate wash</h4>
@@ -71,8 +71,8 @@
 
   <div class="col-1"></div>
 
-  <div class="col-2" style="height:370px">
-    <div class="shadow-card">
+  <div class="col-2">
+    <div class="shadow-card" style="height:390px">
       <img src="<%= image_path "imagemask3.png" %>" class="img-product" alt="">
       <div class="name-product p-3">
         <h4 style="font-size:15px;">intibiome agecare dryness relief intimate wash</h4>
